# sid-iso-builder

./: README.md  pyproject.toml
src/sid_iso_builder/: __init__.py  builder.py  config.py
src/sid_iso_builder/tui/: app.py
tests/: test_builder.py  test_config.py
