[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sid-iso-builder"
version = "0.1.0"
description = "Interactive TUI for crafting Debian Sid ISO images"
authors = [
  { name = "AI Assistant" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.44.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]

[project.scripts]
sid-iso-builder = "sid_iso_builder.tui.app:run"
